--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,26 @@
-@import "./mixins.scss";
-@import "./logo.scss";
-@import "./searchbar.scss";
-@import "./recent-posts.scss";
+.posts-description {
+    margin: 0 4px;
+}
+
+html {
+    font-family: 'Raleway', sans-serif;
+}
+
+body {
+    font-family: 'Raleway', sans-serif;
+}
+
+.app-wrapper {
+    display: grid;
+    justify-content: center;
+}
+
+.home {
+    height: 100vh;
+    width: 66vw;
+
+    display: grid;
+    align-content: space-around;
+    justify-content: center;
+
+}
