--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -18,9 +18,18 @@ body {
 .home {
     height: 100vh;
     width: 66vw;
-
     display: grid;
     align-content: space-around;
-    justify-content: center;
-
+    justify-items: stretch;
+    // grid-template-rows: 1fr 2fr 1fr;
 }
+
+.logo-wrapper {
+    display: grid;
+    justify-items: center;
+}
+
+$color-gray-one: #666666;
+$color-gray-two: #B3B3B3;
+
+@import './searchbar';
