styled result component

--- a/src/style/searchbar.scss
+++ b/src/style/searchbar.scss
@@ -38,3 +38,15 @@
     }
 
 }
+
+.search-bar-home {
+
+}
+
+.search-bar-results {
+    input {
+        font-size: 22px;
+        height: 36px;
+    }
+
+}
