--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -15,14 +15,6 @@ body {
     justify-content: center;
 }
 
-.home {
-    height: 100vh;
-    width: 66vw;
-    display: grid;
-    align-content: space-around;
-    justify-items: stretch;
-    // grid-template-rows: 1fr 2fr 1fr;
-}
 
 .logo-wrapper {
     display: grid;
@@ -39,5 +31,8 @@ $color-gray-one: #666666;
 $color-gray-two: #B3B3B3;
 $color-blue-one: #0079FF;
 
+@import './mixins';
 @import './searchbar';
 @import './recent-posts';
+@import './home';
+@import './results';
