--- a/src/style/searchbar.scss
+++ b/src/style/searchbar.scss
@@ -1,4 +1,5 @@
 .search-bar {
+    display: grid;
 
     .search-bar-wrapper {
 
@@ -20,7 +21,7 @@
 
             &::placeholder {
                 color: $color-gray-two;
-                 font-family: 'Font Awesome\ 5 Free', 'Railway', Arial, Helvetica, sans-serif;
+                font-family: 'Font Awesome\ 5 Free', 'Railway', Arial, Helvetica, sans-serif;
                 font-weight: 600;
             }
 
@@ -40,13 +41,25 @@
 }
 
 .search-bar-home {
+    align-content: center;
+    justify-items: center;
 
+    .search-bar-wrapper {
+        input {
+             height: 118px;
+             font-size: 40px;
+        }
+    }
 }
 
 .search-bar-results {
-    input {
-        font-size: 22px;
-        height: 36px;
-    }
+    align-content: start;
+    justify-items: center;
 
+    .search-bar-wrapper {
+        input {
+            font-size: 22px;
+            height: 36px;
+        }
+    }
 }
