finished styling the result post component

--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -15,8 +15,8 @@ body {
     justify-content: center;
 }
 
-
-.logo-wrapper {
+.logo-wrapper,
+.recent-posts-wrapper {
     display: grid;
     justify-items: center;
 }
@@ -29,6 +29,7 @@ ul {
 
 $color-gray-one: #666666;
 $color-gray-two: #B3B3B3;
+$color-gray-three: #D8D8D8;
 $color-blue-one: #0079FF;
 
 @import './mixins';
