no link & no matches logic

--- a/src/style/results.scss
+++ b/src/style/results.scss
@@ -42,6 +42,8 @@
    .result-post-link {
       min-height: 70px;
       display: flex;
+      flex-basis: 205px;
+      margin-right: 37px;
 
       .post-link-box {
          background-color: black;
