--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -32,11 +32,19 @@ $color-gray-one: #666666;
 $color-gray-two: #B3B3B3;
 $color-gray-three: #D8D8D8;
 $color-blue-one: #0079FF;
+$color-error: #ff0000;
 
 .no-content {
     color: $color-gray-one;
     font-size: 14px;
     line-height: 17px;
+}
+
+.no-matches {
+    color: $color-error;
+    font-family: 'Lato', sans-serif;
+    font-size: 30px;
+    font-weight: 700;
 }
 
 @import './mixins';
