--- a/src/style/searchbar.scss
+++ b/src/style/searchbar.scss
@@ -46,9 +46,15 @@
 
     .search-bar-wrapper {
         input {
-             height: 118px;
-             font-size: 40px;
+            height: 118px;
+            font-size: 40px;
+
+            @media screen and (max-width: 600px) {
+                font-size: 23px;
+                height: 59px;
+            }
         }
+
     }
 }
 
